--- a/dkms.conf
+++ b/dkms.conf
@@ -1,6 +1,8 @@
 PACKAGE_NAME="realtek-8192du"
 PACKAGE_VERSION="1.0"
-MAKE="'make'"
+PROCS_NUM=`nproc`
+[ $PROCS_NUM -gt 16 ] && PROCS_NUM=16
+MAKE="'make' -j$PROCS_NUM KVER=${kernelver} KSRC=/lib/modules/${kernelver}/build"
 BUILT_MODULE_NAME=8192du
 BUILD_MODULE_NAME=8192du
 DEST_MODULE_LOCATION=/kernel/drivers/net/wireless/
